# canonical-take-home

./: Dockerfile  README.md  pyproject.toml
api/: Dockerfile  README.md  alembic.ini  docker-compose.yml  service.py
api/app/: __init__.py
api/app/services/: games.py  users.py
api/tests/: conftest.py
app/: __init__.py
app/api/dependencies/: database.py  games.py
app/api/routes/: __init__.py
app/core/settings/: app.py  development.py  test.py
app/db/repositories/: games.py  users.py
app/models/domain/: games.py
app/models/schemas/: games.py  rwschema.py
app/resources/: strings.py
cli/: README.md  pyproject.toml
cli/cli/: __main__.py  app.py  config.py  main.py
cli/cli/games/: __init__.py  games.py
cli/cli/users/: __init__.py  users.py  validator.py
cli/tests/: conftest.py  test_cli.py  test_games.py  test_users.py  test_validator.py
sdk/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
sdk/.openapi-generator/: FILES
sdk/cannonical/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
sdk/cannonical/api/: __init__.py  games_api.py  users_api.py
sdk/cannonical/apis/: __init__.py
sdk/cannonical/model/: __init__.py  body_games_create_game_api_games_post.py  body_games_update_game_api_games_id_patch.py  body_users_create_user_api_users_post.py  body_users_update_user_api_users_id_patch.py  game.py  game_in_create.py  game_in_response.py  game_in_update.py  http_validation_error.py  list_of_games_in_response.py  list_of_users_in_response.py  location_inner.py  user.py  user_in_create.py  user_in_response.py  user_in_update.py  validation_error.py
sdk/cannonical/models/: __init__.py
sdk/canonical/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
sdk/canonical/api/: __init__.py  games_api.py  users_api.py
sdk/canonical/apis/: __init__.py
sdk/canonical/model/: __init__.py  body_games_create_game_api_games_post.py  game.py  user.py  (+14 more)
sdk/docs/: BodyGamesCreateGameApiGamesPost.md  BodyGamesUpdateGameApiGamesIdPatch.md  BodyUsersCreateUserApiUsersPost.md  BodyUsersUpdateUserApiUsersIdPatch.md  Game.md  GameInCreate.md  GameInResponse.md  GameInUpdate.md  GamesApi.md  ListOfGamesInResponse.md  ListOfUsersInResponse.md  User.md  UserInCreate.md  UserInResponse.md  UserInUpdate.md  UsersApi.md
sdk/test/: test_body_games_create_game_api_games_post.py  test_body_games_update_game_api_games_id_patch.py  test_body_users_create_user_api_users_post.py  test_body_users_update_user_api_users_id_patch.py  test_game.py  test_game_in_create.py  test_game_in_response.py  test_game_in_update.py  test_games_api.py  test_http_validation_error.py  test_list_of_games_in_response.py  test_list_of_users_in_response.py  test_location_inner.py  test_user.py  test_user_in_create.py  test_user_in_response.py  test_user_in_update.py  test_users_api.py  test_validation_error.py
tests/: conftest.py
(+23 files in other folders)
