[tool.poetry]
name = "Canonical Take Home"
version = "0.0.0"
description = "Test app to add users and games to a backend"
authors = ["Jatin Arora"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.2"
fastapi = "^0.79.1"
pydantic = { version = "^1.9", extras = ["email", "dotenv"] }
databases = "^0.6.1"
asyncpg = "^0.26.0"
Unidecode = "^1.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10"
autoflake = "^1.4"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.971"
flake8-fixme = "^1.1"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
