[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Jatin <arorajatin6@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cli = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}
pydantic = "^1.10.2"
cannonical-api = {path = "../sdk"}
orjson = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
pytest-cov = "^3.0.0"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=cli
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
'''
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
